--- a/Dirtman-Fontend/src/index.css
+++ b/Dirtman-Fontend/src/index.css
@@ -49,3 +49,19 @@
 .menu.hidden {
   transform: translateX(-100%);
 }
+.highlight {
+  background-color: #4caf50;
+  color: white;
+  border-radius: 50%;
+}
+
+/* Event Calendar  */
+.calendar_default_event_inner {
+  background: #2e78d6;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 10pt;
+  padding: 5px;
+  opacity: 0.8;
+}
